--- a/src/assets/style/theme/default.scss
+++ b/src/assets/style/theme/default.scss
@@ -1,5 +1,7 @@
 @import '~@/assets/style/public.scss';
 
+$color: #409EFF;
+
 // 默认主题
 .layout-main {
   &.default {
@@ -16,13 +18,57 @@
     // [布局]
     .el-header {
       padding: 0px;
+      .logo-group {
+        width: 200px;
+        float: left;
+        text-align: center;
+        img {
+          height: 60px;
+        }
+      }
+      // 顶栏菜单
+      .el-menu {
+        float: left;
+        border-bottom: none;
+        background-color: transparent;
+        .el-menu-item {
+          border-bottom: none;
+          border-top: 2px solid $color-bg;
+          &:hover {
+            background-color: transparent;
+          }
+          &.is-active {
+            border-bottom: none;
+            border-top: 2px solid $color;
+            background-color: transparent;
+          }
+        }
+      }
     }
+    // 顶栏下面
     .el-container {
+      // 侧边栏
       .el-aside {
-        
+        .el-menu {
+          background-color: transparent;
+          .el-menu-item {
+            &:focus {
+              background-color: transparent;
+            }
+            &:hover {
+              background-color: transparent;
+            }
+          }
+          .el-submenu__title {
+            &:hover {
+              background-color: transparent;
+            }
+          }
+        }
       }
       .el-main {
-
+        padding-top: 0px;
+        padding-left: 0px;
       }
     }
   }
