--- a/src/assets/style/theme/default.scss
+++ b/src/assets/style/theme/default.scss
@@ -69,6 +69,7 @@ $color: #409EFF;
       .el-main {
         padding-top: 0px;
         padding-left: 0px;
+        position: relative;
       }
     }
   }
