--- a/src/assets/style/public.scss
+++ b/src/assets/style/public.scss
@@ -1,6 +1,9 @@
 @import '~@/assets/style/unit/_color.scss';
 @import '~@/assets/style/unit/_size.scss';
 
+// 工具类名统一前缀
+$prefix: dd;
+
 // 禁止用户选中 鼠标变为手形
 %unable-select {
   user-select: none;
