--- a/src/assets/style/public.scss
+++ b/src/assets/style/public.scss
@@ -14,7 +14,7 @@ $prefix: dd;
   border: 1px solid #dddee1;
   border-color: #e9eaec;
   background: #fff;
-  border-radius: $border-radius;
+  border-radius: 4px;
   font-size: 14px;
   position: relative;
 }
