--- a/src/assets/style/fixed/vue-grid-layout.scss
+++ b/src/assets/style/fixed/vue-grid-layout.scss
@@ -7,6 +7,6 @@
     border: 1px solid $color-border-1;
     background-color: rgba(#FFF, .3);
     opacity: 1;
-    border-radius: $border-radius;
+    border-radius: 4px;
   }
 }
