--- a/src/pages/demo/chart/index/style.scss
+++ b/src/pages/demo/chart/index/style.scss
@@ -6,7 +6,7 @@
       @extend %unable-select;
       height: 100%;
       .el-card__body {
-        height: 100%;
+        height: calc(100% - 59px);
         padding: 0px;
       }
     }
