--- a/src/pages/demo/chart/index/style.scss
+++ b/src/pages/demo/chart/index/style.scss
@@ -6,8 +6,14 @@
       @extend %unable-select;
       height: 100%;
       .el-card__body {
-        height: calc(100% - 59px);
+        height: 100%;
         padding: 0px;
+      }
+      // 有header的卡片的body高度需要减去header
+      &.header-in {
+        .el-card__body {
+          height: calc(100% - 59px);
+        }
       }
     }
     .vue-resizable-handle {
