--- a/src/assets/style/fixed/base.scss
+++ b/src/assets/style/fixed/base.scss
@@ -4,6 +4,7 @@ html, body {
   margin: 0px;
   height: 100%;
   background-color: $color-bg;
+  font-family: "Arial", "Microsoft YaHei", "黑体", "宋体", sans-serif;
   #app {
     height: 100%;
   }
