--- a/src/pages/demo/chart/_index/style.scss
+++ b/src/pages/demo/chart/_index/style.scss
@@ -1,7 +1,7 @@
 @import '~@/assets/style/public.scss';
 .demo-chart-index {
-  .col {
-    height: 300px;
+  .vue-grid-layout {
+    margin: -10px;
     .el-card {
       @extend %unable-select;
       height: 100%;
@@ -14,6 +14,14 @@
         .el-card__body {
           height: calc(100% - 59px);
         }
+      }
+    }
+    .vue-resizable-handle {
+      bottom: 6px;
+      right: 6px;
+      opacity: .3;
+      &:hover{
+        opacity: 1;
       }
     }
   }
