--- a/src/pages/demo/chart/index/style.scss
+++ b/src/pages/demo/chart/index/style.scss
@@ -2,6 +2,7 @@
 .demo-chart-index {
   .col {
     height: 300px;
+    margin-bottom: 20px;
     .el-card {
       @extend %unable-select;
       height: 100%;
