--- a/src/assets/style/theme/default.scss
+++ b/src/assets/style/theme/default.scss
@@ -55,6 +55,10 @@ $color: #409EFF;
         .btn-text {
           color: $color-text-normal;
         }
+        .el-dropdown {
+          user-select: none;
+          cursor: pointer;
+        }
       }
     }
     // 顶栏下面
