--- a/src/assets/style/theme/default.scss
+++ b/src/assets/style/theme/default.scss
@@ -45,12 +45,11 @@ $color: #409EFF;
           }
         }
       }
-      // 顶栏按钮
+      // 顶栏右侧的按钮
       .btn-group {
         float: right;
         height: 60px;
         display: flex;
-        // justify-content: center;
         align-items: center;
         .btn-text {
           color: $color-text-normal;
