fixed scroll bar bug for repairing page switch animation

--- a/src/assets/style/theme/default.scss
+++ b/src/assets/style/theme/default.scss
@@ -124,6 +124,7 @@ $color: #409EFF;
       .el-main {
         padding: 0px;
         position: relative;
+        overflow: hidden;
       }
     }
   }
