--- a/src/assets/style/theme/classic.scss
+++ b/src/assets/style/theme/classic.scss
@@ -1,22 +1,23 @@
 @import '~@/assets/style/public.scss';
 
+$theme-color: #EFF4F8;
+
 // 默认主题
 .layout-main {
   &.classic {
     height: 100vh;
     width: 100vw;
-    background-color: #EFF4F8;
-    // [全局设置]
-    // 关闭所有卡片的阴影
+    background-color: $theme-color;
     .el-card {
       box-shadow: none;
       &:hover {
         box-shadow: 0 0 8px 0 rgba(232,237,250,.6), 0 2px 4px 0 rgba(232,237,250,.5);
       }
     }
-    // [布局]
+    // [布局] 顶栏
     .el-header {
       padding: 0px;
+      // logo区域
       .logo-group {
         transition: width .3s;
         float: left;
@@ -25,6 +26,7 @@
           height: 60px;
         }
       }
+      // 折叠侧边栏切换按钮
       .toggle-sidemenu-btn {
         float: left;
         height: 60px;
@@ -43,14 +45,14 @@
           }
         }
       }
-      // 顶栏菜单
+      // [菜单] 顶栏
       .el-menu {
         float: left;
         border-bottom: none;
         background-color: transparent;
         .el-menu-item {
           border-bottom: none;
-          border-top: 2px solid #EFF4F8;
+          border-top: 2px solid transparent;
           &:hover {
             background-color: transparent;
           }
@@ -76,12 +78,13 @@
         }
       }
     }
-    // 顶栏下面
+    // [布局] 顶栏下面
     .el-container {
       // 侧边栏
       .el-aside {
         transition: width .3s;
         overflow: inherit;
+        // 空菜单
         .dd-side-menu-empty {
           background-color: rgba(#000, .03);
           margin: $margin;
@@ -91,31 +94,27 @@
           text-align: center;
           color: $color-text-sub;
         }
+        .dd-side-menu {
+          &:not(.el-menu--collapse) {
+            width: 200px;
+            min-height: 400px;
+          }
+        }
+        // [菜单] 正常状态
         .el-menu {
-          background-color: transparent;
+          background-color: red;
           border-right: none;
-          &.el-menu--collapse {
-            .el-submenu {
-              .el-menu {
-                background-color: transparent;
-              }
-            }
-            .el-submenu__title {
-              text-align: center;
-            }
-          }
-          .el-menu-item {
-            &:focus {
-              background-color: rgba(#000, .05);
-            }
-            &:hover {
-              background-color: rgba(#000, .05);
-            }
-          }
           .el-submenu__title {
             &:hover {
               background-color: rgba(#000, .05);
             }
+          }
+        }
+        // [菜单] 折叠状态
+        .el-menu--collapse {
+          background-color: blue;
+          .el-submenu__title {
+            text-align: center;
           }
         }
       }
