--- a/src/assets/style/theme/classic/index.scss
+++ b/src/assets/style/theme/classic/index.scss
@@ -1,1 +1,19 @@
 @import '../theme-base.scss';
+
+$theme-name: 'star';
+$theme-bg-color: #EFF4F8;
+$theme-bg-image: '/static/image/bg/star.jpg';
+$theme-card-full-border-color: #d8dfea;
+
+.theme-#{$theme-name} {
+  background-color: $theme-bg-color;
+  background-image: url($theme-bg-image);
+  .dd-card-full {
+    .dd-card-full__header {
+      border-bottom: 1px solid $theme-card-full-border-color;
+    }
+    .dd-card-full__footer {
+      border-top: 1px solid $theme-card-full-border-color;
+    }
+  }
+}
