--- a/src/assets/style/theme/theme-base.scss
+++ b/src/assets/style/theme/theme-base.scss
@@ -2,34 +2,26 @@
 
 $theme-color: #EFF4F8;
 
-$border-color: #d8dfea;
-// 默认主题
-.classic {
+// 主题公用
+.theme {
   height: 100vh;
   width: 100vw;
-  background-color: $theme-color;
-  background-image: url('/static/image/bg/star.jpg');
   background-size: cover;
   background-position: center;
   .el-card {
     box-shadow: none;
     &:hover {
-      // box-shadow: 0 0 8px 0 rgba(232,237,250,.6), 0 2px 4px 0 rgba(232,237,250,.5);
-      box-shadow: none;
+      box-shadow: 0 0 8px 0 rgba(232,237,250,.6), 0 2px 4px 0 rgba(232,237,250,.5);
     }
   }
   .dd-card-full {
     position: absolute;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
-    border-top: 1px solid $border-color;
-    border-left: 1px solid $border-color;
-    border-right: 1px solid $border-color;
-    background-color: #fff;
+    background-color: #FFF;
     overflow: hidden;
     color: #303133;
     &:hover {
-      // box-shadow: 0 0 8px 0 rgba(232,237,250,.6), 0 2px 4px 0 rgba(232,237,250,.5);
       box-shadow: none;
     }
     .dd-card-full__header {
@@ -38,7 +30,6 @@ $border-color: #d8dfea;
       left: 0px;
       width: 100%;
       padding: 18px 20px;
-      border-bottom: 1px solid $border-color;
       box-sizing: border-box;
     }
     .dd-card-full__body {
@@ -55,7 +46,6 @@ $border-color: #d8dfea;
       left: 0px;
       width: 100%;
       padding: 18px 20px;
-      border-top: 1px solid $border-color;
       box-sizing: border-box;
     }
   }
