--- a/src/assets/style/theme/_bak.scss
+++ b/src/assets/style/theme/_bak.scss
@@ -73,7 +73,7 @@ $border-color: #d8dfea;
         }
       }
       // 折叠侧边栏切换按钮
-      .toggle-sidemenu-btn {
+      .toggle-aside-btn {
         float: left;
         height: 60px;
         width: 60px;
