--- a/src/assets/style/theme/theme.scss
+++ b/src/assets/style/theme/theme.scss
@@ -1,5 +1,7 @@
 @import '~@/assets/style/public.scss';
 
+@import './theme-dd-container-full.scss';
+
 $theme-color: #EFF4F8;
 
 // 主题公用
@@ -8,47 +10,6 @@ $theme-color: #EFF4F8;
   width: 100vw;
   background-size: cover;
   background-position: center;
-  .el-card {
-    box-shadow: none;
-    &:hover {
-      box-shadow: 0 0 8px 0 rgba(232,237,250,.6), 0 2px 4px 0 rgba(232,237,250,.5);
-    }
-  }
-  .dd-container-full {
-    position: absolute;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-    background-color: #FFF;
-    overflow: hidden;
-    color: #303133;
-    &:hover {
-      box-shadow: none;
-    }
-    .dd-container-full__header {
-      position: absolute;
-      top: 0px;
-      left: 0px;
-      width: 100%;
-      padding: 18px 20px;
-      box-sizing: border-box;
-    }
-    .dd-container-full__body {
-      position: absolute;
-      padding: 20px;
-      left: 0px;
-      right: 0px;
-      bottom: 0px;
-      overflow: auto;
-    }
-    .dd-container-full__footer {
-      position: absolute;
-      bottom: 0px;
-      left: 0px;
-      width: 100%;
-      padding: 18px 20px;
-      box-sizing: border-box;
-    }
-  }
   // [布局] 顶栏
   .el-header {
     padding: 0px;
@@ -62,7 +23,7 @@ $theme-color: #EFF4F8;
       }
     }
     // 折叠侧边栏切换按钮
-    .toggle-sidemenu-btn {
+    .toggle-aside-btn {
       float: left;
       height: 60px;
       width: 60px;
@@ -73,11 +34,7 @@ $theme-color: #EFF4F8;
       cursor: pointer;
       i {
         font-size: 20px;
-        color: $color-text-normal;
         margin-top: 4px;
-        &:hover {
-          color: $color-primary;
-        }
       }
     }
     // [菜单] 顶栏
@@ -88,12 +45,9 @@ $theme-color: #EFF4F8;
       .el-menu-item {
         border-bottom: none;
         border-top: 2px solid transparent;
-        &:hover {
-          background-color: transparent;
-        }
         &.is-active {
           border-bottom: none;
-          border-top: 2px solid $color-primary;
+          border-top-color: $color-primary;
           background-color: transparent;
         }
       }
