--- a/src/assets/style/theme/_bak.scss
+++ b/src/assets/style/theme/_bak.scss
@@ -110,7 +110,7 @@ $border-color: #d8dfea;
         }
       }
       // 顶栏右侧的按钮
-      .btn-group {
+      .dd-header-right {
         float: right;
         height: 60px;
         display: flex;
