--- a/src/assets/style/theme/star/index.scss
+++ b/src/assets/style/theme/star/index.scss
@@ -1,7 +1,7 @@
 @import '../theme.scss';
 
 $theme-name: 'star';
-$theme-bg-color: #000;
+$theme-bg-color: #EFF4F8;
 $theme-bg-image: '/static/image/bg/star.jpg';
 $theme-container-full-border-color: #d8dfea;
 
