--- a/src/assets/style/theme/star/index.scss
+++ b/src/assets/style/theme/star/index.scss
@@ -28,12 +28,18 @@ $theme-container-full-border-color: #d8dfea;
         }
       }
     }
+    @mixin header-el-menu-item {
+      background-color: transparent;
+      background-image: linear-gradient(-180deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.00) 90%);
+      border-top-color: rgba(0, 0, 0, 0.6);
+    }
     // 顶栏菜单
     .el-menu {
       .el-menu-item {
+        transition: border-top-color 0s;
         color: #FFF;
         &:hover {
-          background-color: rgba(#000, 0.1);
+          @include header-el-menu-item;
         }
         &.is-active {
           border-top-color: #FFF;
@@ -41,9 +47,10 @@ $theme-container-full-border-color: #d8dfea;
       }
       .el-submenu {
         .el-submenu__title {
+          transition: border-top-color 0s;
           color: #FFF;
           &:hover {
-            background-color: rgba(#000, 0.1);
+            @include header-el-menu-item;
           }
           .el-submenu__icon-arrow {
             color: #FFF;
@@ -67,12 +74,16 @@ $theme-container-full-border-color: #d8dfea;
   .el-container {
     // 侧边栏
     .el-aside {
+      @mixin aside-el-menu-item {
+        background-color: transparent;
+        background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.00) 90%);
+      }
       // [菜单] 正常状态
       .el-menu {
         .el-menu-item {
           color: #FFF;
           &:hover {
-            background-color: rgba(#000, 0.1);
+            @include aside-el-menu-item;
           }
           i {
             color: #FFF;
@@ -83,7 +94,7 @@ $theme-container-full-border-color: #d8dfea;
         .el-submenu__title {
           color: #FFF;
           &:hover {
-            background-color: rgba(#000, 0.1);
+            @include aside-el-menu-item;
           }
           i {
             color: #FFF;
