--- a/src/assets/style/theme/theme.scss
+++ b/src/assets/style/theme/theme.scss
@@ -80,6 +80,23 @@ $theme-color: #EFF4F8;
       .el-menu {
         background-color: transparent;
         border-right: none;
+        .el-menu-item {
+          i {
+            margin-right: 5px;
+            font-size: 20px;
+          }
+        }
+      }
+      .el-submenu {
+        .el-submenu__title {
+          i {
+            margin-right: 5px;
+            font-size: 20px;
+          }
+          .el-submenu__icon-arrow {
+            margin-top: -10px;
+          }
+        }
       }
       // [菜单] 折叠状态
       .el-menu--collapse {
