--- a/src/assets/style/theme/star/index.scss
+++ b/src/assets/style/theme/star/index.scss
@@ -6,10 +6,12 @@ $theme-bg-image: '/static/image/bg/star.jpg';
 $theme-container-full-border-color: #d8dfea;
 
 .theme-#{$theme-name} {
-  background-color: $theme-bg-color;
-  background-image: url($theme-bg-image);
-  background-size: cover;
-  background-position: center;
+  .theme {
+    background-color: $theme-bg-color;
+    background-image: url($theme-bg-image);
+    background-size: cover;
+    background-position: center;
+  }
   // 菜单项目
   @mixin theme-menu-hover-style {
     background-color: #eff4f8;
