--- a/src/assets/style/theme/theme.scss
+++ b/src/assets/style/theme/theme.scss
@@ -55,10 +55,7 @@
         padding: 14px 12px;
         border-radius: 4px;
         margin: 0px !important;
-        margin-right: 10px !important;
-        &:last-child {
-          margin-right: 0px !important;
-        }
+        margin-left: 10px !important;
       }
       .el-dropdown {
         user-select: none;
