--- a/src/assets/style/theme/star/index.scss
+++ b/src/assets/style/theme/star/index.scss
@@ -8,10 +8,11 @@ $theme-bg-color: #EFF4F8;
 $theme-bg-image: '/static/image/bg/star.jpg';
 // container组件的边框
 $theme-container-border: 1px solid #d8dfea;
-// 顶栏和侧边栏中展开的菜单 hover 状态下的文字和图标颜色
+
+// 顶栏和侧边栏中展开的菜单 hover 状态下
 $theme-menu-item-color-hover: #FFF;
-// 顶栏和侧边栏中展开的菜单 hover 状态下的背景颜色
 $theme-menu-item-background-color-hover: #187181;
+
 // 顶栏上的文字颜色
 $theme-header-text-color: #FFF;
 // 顶栏上的项目在 hover 时的背景颜色
@@ -20,6 +21,7 @@ $theme-header-item-background-color-hover: rgba(#FFF, .3);
 $theme-header-item-background-color-focus: rgba(#FFF, .3);
 // 顶栏上的项目在 active 时的背景颜色
 $theme-header-item-background-color-active: rgba(#000, .3);
+
 // 侧边栏上的文字颜色
 $theme-aside-text-color: #FFF;
 // 侧边栏上的项目在 hover 时的背景颜色
